--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-       
-        {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
-        }
+    {
+        "name": "Launch Chrome",
+        "request": "launch",
+        "type": "pwa-chrome",
+        "url": "file:///C:/Users/jaxson/Desktop/coding/js%20tutorial/code/index.html",
+        "webRoot": "${workspaceFolder}"
+    },    
     ]
 }
